add env for Facebook app

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 MAILJET_USERNAME=64ba0ab95b9bea7a97a1cc287e5adf80
 MAILJET_PASSWORD=baafd378dee1246577bc00d158b487de
+FACEBOOK_APPID=1670401083239953
+FACEBOOK_SECRETKEY=36c3eb7eef724d4ffa8bc221ef20b89c
