--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ MAILJET_USERNAME=64ba0ab95b9bea7a97a1cc287e5adf80
 MAILJET_PASSWORD=baafd378dee1246577bc00d158b487de
 FACEBOOK_APPID=1670401083239953
 FACEBOOK_SECRETKEY=36c3eb7eef724d4ffa8bc221ef20b89c
+NOTIFY_URL=http://9c74b0eb.ngrok.io/notify
+RETURN_URL=http://9c74b0eb.ngrok.io/your_trips
